# IC-projects

./: CMakeLists.txt  README.md
Project1/: .gitignore  Ex10.cpp  Ex11.cpp  Ex2.cpp  Ex3.cpp  Ex4.cpp  Ex5.cpp  Ex6.cpp  Ex7.cpp  Ex8.cpp  Ex9.cpp  audio.cpp  audioHST.txt  audio_hist.cpp  hist_map.m  letterHist.cpp  lusiadas.txt  nums.txt  out.txt
Project2/: .doxygen  .gitignore  ex1.cpp
Project2/include/: AudioFile.h  BitStream.h  Golomb.h  GolombSgd.h
Project2/lib/: AudioFile.h
Project2/src/: AudioEncoder.cpp  AudioEncoder.h  AudioPredictor.cpp  AudioPredictor.h  ImageEncoder.cpp  ImageEncoder.h  ImagePredictor.cpp  ImagePredictor.h  imgProcess.cpp  main.cpp
Project2/test/: TestBitStream.h  TestGolombSgd.h
Project3/: CMakeLists.txt
Project3/models/: en_1_1.model  en_2_1.model  en_3_1.model  fr_1_1.model  fr_2_1.model  fr_3_1.model  it_1_1.model  it_2_1.model  it_3_1.model  pt_1_1.model  pt_2_1.model  pt_3_1.model
Project3/src/: fcm.cpp  findlang.cpp  lang.cpp
Project3/src/fmc/: FCModel.cpp  FCModel.h  FCModelContext.h  FCModelFactory.cpp  FCModelFactory.h  FCModel_BaseClass.cpp  FCModel_BaseClass.h  fcm.cpp
Project3/src/utils/: math_utils.h
